Bug 489234 - Replace new Integer(int) with Integer.valueOf()
Changes for 
org.eclipse.ui.brower
org.eclipse.core.commands
org.eclipse.e4.ui.css.swt 
org.eclipse.ui.forms

Change-Id: I08545d93ed11b74ddc9be5ab1d20334ba37849f3
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>